fix contrast

--- a/final-project/css/fp-style.css
+++ b/final-project/css/fp-style.css
@@ -6,12 +6,11 @@ body {
   line-height: normal;
 }
 
-header,
-footer {
+header {
   margin: 0 auto;
   padding: 0.5rem;
   border: 1px solid #0d0808;
-  background-color: #1445f7;
+  background-color: #f19a3e;
   text-align: center;
   font-family: "Sanchez", serif;
 }
@@ -25,8 +24,8 @@ main {
   margin: 1rem auto;
   padding: 1rem;
   border: 1px solid #0d0808;
-  background-color: #ccab35;
-  text-align: center;
+  background-color: #98d9c2;
+  text-align: left;
 }
 
 main h2 {
@@ -37,6 +36,15 @@ main h2 {
 img {
   width: 65px;
   height: auto;
+}
+
+footer {
+  margin: 0 auto;
+  padding: 0.5rem;
+  border: 1px solid #0d0808;
+  background-color: #f19a3e;
+  text-align: left;
+  font-family: "Sanchez", serif;
 }
 
 /* Class Selectors */
